--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LexonArg</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    
+    <header>
+        <a href="#" class="logo">LexonArg<span>.</span></a>
+
+        <nav class="navbar">
+            <a href="#home">Home</a>
+            <a href="#rdulces">Recetas Dulces</a>
+            <a href="#rsaladas">Recetas Saladas</a>
+            <a href="#dato">Datos Curiosos</a>
+
+        </nav>
+
+        <!-- <div class="icons">
+            <a href=""></a>
+        </div> -->
+
+    </header>
+
+
+    <main></main>
+
+    <footer></footer>
 </body>
 </html>
