--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <header>
+
+        <input type="checkbox" name="" id="toggler">
+        <label for="toggler" class="fas fa-bars"></label>
+
         <a href="#" class="logo">LexonArg<span>.</span></a>
 
         <nav class="navbar">
@@ -20,9 +24,12 @@
 
         </nav>
 
-        <!-- <div class="icons">
-            <a href=""></a>
-        </div> -->
+        <div class="icons">
+            <a href="#" class="fas fa-star"></a>
+            <a href="#" class="fas fa-star"></a>
+            <a href="#" class="fas fa-star"></a>
+        </div>
+
 
     </header>
 
