Envio de cambios

--- a/r.dulces.html
+++ b/r.dulces.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pruebadeenvio</title>
 </head>
 <body>
-    
+    <h1>Recetas Dulces</h1>
+    <h2>Alfajores</h2>
+    <ul>
+        <li>Maicena</li>
+        <li>Santafecino</li>
+        <li>Marplatense</li>
+</ul>
+    <h2>Panqueques</h2>
+    <h2>Chocotorta</h2>
 </body>
 </html>
