enlazamos las paginas

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <a href="#" class="logo">LexonArg<span>.</span></a>
 
         <nav class="navbar">
-            <a href="#home">Home</a>
-            <a href="#rdulces">Recetas Dulces</a>
-            <a href="#rsaladas">Recetas Saladas</a>
-            <a href="#dato">Datos Curiosos</a>
+            <a href="/index.html">Home</a>
+            <a href="/r.dulces.html">Recetas Dulces</a>
+            <a href="/r.saladas.html">Recetas Saladas</a>
+            <a href="/dato.c.html">Datos Curiosos</a>
 
         </nav>
 
