--- a/r.saladas.html
+++ b/r.saladas.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <header>
+
+        <input type="checkbox" name="" id="toggler">
+        <label for="toggler" class="fas fa-bars"></label>
+
+        <a href="#" class="logo">LexonArg<span>.</span></a>
+
+        <nav class="navbar">
+            <a href="/index.html">Home</a>
+            <a href="/r.dulces.html">Recetas Dulces</a>
+            <a href="/r.saladas.html">Recetas Saladas</a>
+            <a href="/dato.c.html">Datos Curiosos</a>
+
+        </nav>
+
+        <div class="icons">
+            <a href="#" class="fas fa-star"></a>
+            <a href="#" class="fas fa-star"></a>
+            <a href="#" class="fas fa-star"></a>
+        </div>
+
+    </header>
+
+
+
+
+
+
+
+    
     
 </body>
 </html>
