--- a/r.dulces.html
+++ b/r.dulces.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pruebadeenvio</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Recetas Dulces</h1>
-    <h2>Alfajores</h2>
-    <ul>
-        <li>Maicena</li>
-        <li>Santafecino</li>
-        <li>Marplatense</li>
-</ul>
-    <h2>Panqueques</h2>
-    <h2>Chocotorta</h2>
+    <header>
+
+        <input type="checkbox" name="" id="toggler">
+        <label for="toggler" class="fas fa-bars"></label>
+
+        <a href="#" class="logo">LexonArg<span>.</span></a>
+
+        <nav class="navbar">
+            <a href="/index.html">Home</a>
+            <a href="/r.dulces.html">Recetas Dulces</a>
+            <a href="/r.saladas.html">Recetas Saladas</a>
+            <a href="/dato.c.html">Datos Curiosos</a>
+
+        </nav>
+
+        <div class="icons">
+            <a href="#" class="fas fa-star"></a>
+            <a href="#" class="fas fa-star"></a>
+            <a href="#" class="fas fa-star"></a>
+        </div>
+
+
+    </header>
+
+    <main>
+        <h1>Recetas Dulces</h1>
+        <h2>Alfajores</h2>
+        <ul>
+            <li>Maicena</li>
+            <li>Santafecino</li>
+            <li>Marplatense</li>
+        </ul>
+
+        <h2>Panqueques</h2>
+        <h2>Chocotorta</h2>
+
+    </main>
+
 </body>
-</html> 
+
+</html>
