modif. en html. add main: imgs, contenedores y subs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
     <header>
 
@@ -16,7 +18,7 @@
 
         <a href="#" class="logo">LexonArg<span>.</span></a>
 
-        <nav class="navbar">
+        <nav class="nav">
             <a href="/index.html">Home</a>
             <a href="/r.dulces.html">Recetas Dulces</a>
             <a href="/r.saladas.html">Recetas Saladas</a>
@@ -30,12 +32,71 @@
             <a href="#" class="fas fa-star"></a>
         </div>
 
-
     </header>
 
+    <main>
+        <section class="home">
+            <div class="contenido">
+                <h3>Recetas</h3>
+                <span>de las Comidas Típicas de Argentina</span>
+                <p>Para que no te pierdas nada de estos deliciosos y tradicionales platos Argentinos.
+                   Adelante, ¡Vamos a proobarlos!</p>
+            </div>
+        </section>
 
-    <main></main>
+        <section class="introd">
+            <h1 class="subtitulo">Elige... ¿Dulce o Salado?</h1>
+
+            <div class="dulceOsalado">
+
+                <div class="img-container">
+                    <img src="/img/Pastelitos-y-mate.jpg">
+                    <h3>Recetas Dulces</h3>
+                </div>
+
+                <div class="contenido">
+                    <h3>Conocé</h3>
+                    <p>Algunas recetas de las típicas comidas dulces que se consumen en argentina, al momento de acompañar a nuestra infusión tradicional ¡El Mate!<p>
+                    <p>La famosa chocotorta, los alfajores de maicena, la torta frita, las bolas de fraile, los pastelitos criollos y ¡mucho más!</p>
+                    <a href="#" class="btn">Ver Recetas</a>
+                </div>
+            </div>
+
+            <div class="dulceOsalado">
+
+                <div class="img-container">
+                    <img src="/img/parrila.avif">
+                    <h3>Recetas Saladas</h3>
+                </div>
+
+                <div class="contenido">
+                    <h3>Conocé</h3>
+                    <p>Algunas recetas de las típicas comidas saladas que se consumen en argentina, al momento de almozar, cenar y por supuesto, acompañar el mate .<p>
+                    <p>El Famoso asado argentino, la milanesa napolitana, el choripán, las torta fritas, las empanas y ¡mucho más!</p>
+                    <a href="#" class="btn">Ver Recetas</a>
+                </div>
+            </div>            
+
+        </section>
+
+        <section class="introd">
+            <h1 class="subtitulo">Recetas...</h1>
+
+            <span class="allRecetas"><img src="/img/choripan.png"></span>
+            <span class="allRecetas"><img src="/img/choripan.png"></span>
+            <span class="allRecetas"><img src="/img/choripan.png"></span>
+            <span class="allRecetas"><img src="/img/choripan.png"></span>
+
+        </section>
+
+
+
+
+
+
+    </main>
 
     <footer></footer>
 </body>
+
 </html>
