--- a/r.saladas.html
+++ b/r.saladas.html
@@ -16,7 +16,7 @@
 
         <a href="#" class="logo">LexonArg<span>.</span></a>
 
-        <nav class="navbar">
+        <nav class="nav">
             <a href="/index.html">Home</a>
             <a href="/r.dulces.html">Recetas Dulces</a>
             <a href="/r.saladas.html">Recetas Saladas</a>
