--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h3>Conocé</h3>
                     <p>Algunas recetas de las típicas comidas dulces que se consumen en argentina, al momento de acompañar a nuestra infusión tradicional ¡El Mate!<p>
                     <p>La famosa chocotorta, los alfajores de maicena, la torta frita, las bolas de fraile, los pastelitos criollos y ¡mucho más!</p>
-                    <a href="#" class="btn">Ver Recetas</a>
+                    <a href="/r.dulces.html" class="btn">Ver Recetas</a>
                 </div>
             </div>
 
@@ -73,7 +73,7 @@
                     <h3>Conocé</h3>
                     <p>Algunas recetas de las típicas comidas saladas que se consumen en argentina, al momento de almozar, cenar y por supuesto, acompañar el mate .<p>
                     <p>El Famoso asado argentino, la milanesa napolitana, el choripán, las torta fritas, las empanas y ¡mucho más!</p>
-                    <a href="#" class="btn">Ver Recetas</a>
+                    <a href="/r.saladas.html" class="btn">Ver Recetas</a>
                 </div>
             </div>            
 
@@ -82,21 +82,17 @@
         <section class="introd">
             <h1 class="subtitulo">Recetas...</h1>
 
-            <span class="allRecetas"><img src="/img/choripan.png"></span>
-            <span class="allRecetas"><img src="/img/choripan.png"></span>
-            <span class="allRecetas"><img src="/img/choripan.png"></span>
-            <span class="allRecetas"><img src="/img/choripan.png"></span>
-
+        
         </section>
-
-
-
-
 
 
     </main>
 
-    <footer></footer>
+    <footer>
+        Copyright ©2023; Created By LexonArg. Members
+    </footer>
+
+    <script src="/js/form.api.js"></script>
 </body>
 
 </html>
