--- a/r.saladas.html
+++ b/r.saladas.html
@@ -40,5 +40,10 @@
 
     
     
+    <footer>
+        Copyright ©2023; Created By LexonArg. Members
+    </footer>
+
+    <script src="/js/form.api.js"></script>
 </body>
 </html>
