--- a/dato.c.html
+++ b/dato.c.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>LexonArg</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
     <header>
 
@@ -30,9 +32,142 @@
             <a href="#" class="fas fa-star"></a>
             <a href="#" class="fas fa-star"></a>
         </div>
-
-
     </header>
-    
+
+    <main>
+        <section class="introd">
+            <div class="dulceOsalado">
+                <div class="img-container">
+                    <img src="/img/alfajoresmaicena.png">
+                    <h3>Dato Curioso!</h3>
+                </div>
+                <div class="contenido">
+                    <h3>Sobre el Alfajor de Maicena:</h3>
+                    <p>Algunas recetas de las típicas comidas dulces que se consumen en argentina, al momento de
+                        acompañar a nuestra infusión tradicional ¡El Mate!
+                    <p>
+                </div>
+            </div>
+        </section>
+
+        <section class="introd">
+            <div class="dulceOsalado">
+                <div class="img-container">
+                    <img src="/img/postre balcarce.png">
+                    <h3>Dato Curioso!</h3>
+                </div>
+                <div class="contenido">
+                    <h3>Sobre el Postre Balcarce:</h3>
+                    <p>Algunas recetas de las típicas comidas dulces que se consumen en argentina, al momento de
+                        acompañar a nuestra infusión tradicional ¡El Mate!
+                    <p>
+                </div>
+            </div>
+        </section>
+
+        <section class="introd">
+            <div class="dulceOsalado">
+                <div class="img-container">
+                    <img src="/img/chocotorta-1x1.png">
+                    <h3>Dato Curioso!</h3>
+                </div>
+                <div class="contenido">
+                    <h3>Sobre La Chocotorta:</h3>
+                    <p>Algunas recetas de las típicas comidas dulces que se consumen en argentina, al momento de
+                        acompañar a nuestra infusión tradicional ¡El Mate!
+                    <p>
+                </div>
+            </div>
+        </section>
+
+        <section class="introd">
+            <div class="dulceOsalado">
+                <div class="img-container">
+                    <img src="/img/pastelitos.png">
+                    <h3>Dato Curioso!</h3>
+                </div>
+                <div class="contenido">
+                    <h3>Sobre Los Pastelitos:</h3>
+                    <p>Algunas recetas de las típicas comidas dulces que se consumen en argentina, al momento de
+                        acompañar a nuestra infusión tradicional ¡El Mate!
+                    <p>
+                </div>
+            </div>
+        </section>
+
+        <section class="introd">
+            <div class="dulceOsalado">
+                <div class="img-container">
+                    <img src="/img/buñuelos.png">
+                    <h3>Dato Curioso!</h3>
+                </div>
+                <div class="contenido">
+                    <h3>Sobre Los Buñuelos:</h3>
+                    <p>Algunas recetas de las típicas comidas dulces que se consumen en argentina, al momento de
+                        acompañar a nuestra infusión tradicional ¡El Mate!
+                    <p>
+                </div>
+            </div>
+        </section>
+
+        <section class="introd">
+            <div class="dulceOsalado">
+                <div class="img-container">
+                    <img src="/img/bolas de fraile.png">
+                    <h3>Dato Curioso!</h3>
+                </div>
+                <div class="contenido">
+                    <h3>Sobre Las Bolas de Fraile:</h3>
+                    <p>Algunas recetas de las típicas comidas dulces que se consumen en argentina, al momento de
+                        acompañar a nuestra infusión tradicional ¡El Mate!
+                    <p>
+                </div>
+            </div>
+        </section>
+
+        <section class="introd">
+            <div class="dulceOsalado">
+                <div class="img-container">
+                    <img src="/img/cubanitos.png">
+                    <h3>Dato Curioso!</h3>
+                </div>
+                <div class="contenido">
+                    <h3>Sobre Los Cubanitos:</h3>
+                    <p>Algunas recetas de las típicas comidas dulces que se consumen en argentina, al momento de
+                        acompañar a nuestra infusión tradicional ¡El Mate!
+                    <p>
+                </div>
+            </div>
+        </section>
+
+        <section class="introd">
+            <div class="dulceOsalado">
+                <div class="img-container">
+                    <img src="/img/pastafrola-membrillo.png">
+                    <h3>Dato Curioso!</h3>
+                </div>
+                <div class="contenido">
+                    <h3>Sobre La Pasta Frola:</h3>
+                    <p>Algunas recetas de las típicas comidas dulces que se consumen en argentina, al momento de
+                        acompañar a nuestra infusión tradicional ¡El Mate!
+                    <p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Fin de los Datos sobre las recetas dulces -->
+
+
+
+
+    </main>
+
+
+    <footer>
+        Copyright ©2023; Created By LexonArg. Members
+    </footer>
+
+    <script src="/js/form.api.js"></script>
+
 </body>
 </html>
