--- a/r.dulces.html
+++ b/r.dulces.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pruebadeenvio</title>
+    <title>LexonArg</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/estilos.css">
@@ -313,6 +313,11 @@
         
     </main>
 
+    <footer>
+        Copyright ©2023; Created By LexonArg. Members
+    </footer>
+
+    <script src="/js/form.api.js"></script>
 </body>
 
 </html>
