--- a/dato.c.html
+++ b/dato.c.html
@@ -13,25 +13,6 @@
 
 <body>
     <header>
-
-        <input type="checkbox" name="" id="toggler">
-        <label for="toggler" class="fas fa-bars"></label>
-
-        <a href="#" class="logo">LexonArg<span>.</span></a>
-
-        <nav class="nav">
-            <a href="/index.html">Home</a>
-            <a href="/r.dulces.html">Recetas Dulces</a>
-            <a href="/r.saladas.html">Recetas Saladas</a>
-            <a href="/dato.c.html">Datos Curiosos</a>
-
-        </nav>
-
-        <div class="icons">
-            <a href="#" class="fas fa-star"></a>
-            <a href="#" class="fas fa-star"></a>
-            <a href="#" class="fas fa-star"></a>
-        </div>
     </header>
 
     <main>
@@ -164,10 +145,9 @@
 
 
     <footer>
-        Copyright ©2023; Created By LexonArg. Members
     </footer>
 
-    <script src="/js/form.api.js"></script>
+    <script src="./js/index.js"></script>
 
 </body>
 </html>
