realice cambio en datos curiosos

--- a/dato.c.html
+++ b/dato.c.html
@@ -17,6 +17,7 @@
 
     <main>
         <div class="barra3"> <h1>DATOS CURIOSOS</h1></div>
+        <img src="img/cubanitos.png" alt="" class="progress">
         <img class= "progress" src="img/provoleta.png" alt="emoji" >
         <img src="img/chocotorta-1x1.png" alt="" class="progress">
         <img src="img/milanesa.jpeg" alt="" class="progress">
@@ -28,6 +29,7 @@
         <img src="img/empanadas.jpeg" alt="" class="progress">
          <img src="img/alfajoresmaicena.png" alt="" class="progress">
         <img src="img/fritas.jpg" alt="" class="progress">
+        <img src="img/postre balcarce.png" alt="" class="progress">
         <section class="introd">
             <div class="dulceOsalado">
                 <div class="img-container">
