--- a/index.html
+++ b/index.html
@@ -21,8 +21,20 @@
                 <span>de las Comidas Típicas de Argentina</span>
                 <p>Para que no te pierdas nada de estos deliciosos y tradicionales platos Argentinos.
                    Adelante, ¡Vamos a proobarlos!</p>
+
             </div>
+
+
         </section>
+
+        <section>
+            <div class="container">
+                <div class="icon">----</div>
+                <div class="temp"> - ºC</div>
+                <div class="summary">----</div>
+                <div class="location"></div>
+            </div>
+        </section> 
 
         <section class="introd">
             <h1 class="subtitulo">Elige... ¿Dulce o Salado?</h1>
