--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>LexonArg</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="shortcut icon" href="img/favicon3.png" type="image/x-icon">
 </head>
 
 <body>
@@ -57,7 +58,7 @@
             <div class="dulceOsalado">
 
                 <div class="img-container">
-                    <img src="/img/parrila.avif">
+                    <img src="img/Asado.png">
                     <h3>Recetas Saladas</h3>
                 </div>
 
