--- a/dato.c.html
+++ b/dato.c.html
@@ -170,6 +170,86 @@
 
         <!-- Fin de los Datos sobre las recetas dulces -->
 
+        <!-- Comienzo de los Datos sobre las recetas saladas-->
+        <section class="introd">
+            <div class="dulceOsalado">
+                <div class="img-container">
+                    <img src="/img/pastafrola-membrillo.png">
+                    <h3>Dato Curioso!</h3>
+                </div>
+                <div class="contenido">
+                    <h3>Sobre La Pasta Frola:</h3>
+                    <p>Cuenta la leyenda que el origen de esta tarta se debe a una sirena llamada Partenope, que una vez por año visitaba el Golfo de Posillipo. Los napolitanos, para homenajearla le regalaban trigo, huevos, agua de flores de naranjo y otras materias primas que siete vírgenes pasaron a buscar. La sirena, en agradecimiento, recibió de ellos la pasta frola, que, a su vez, obsequió a los napolitanos.
+                        Pero más realista es la historia que afirma que unas religiosas la inventaron en el convento de San Gregorio de Armeno. La pasta frola trascendió los muros del convento y se difundió por la región. Pero su fama llegó cuando el carruaje del marqués de Rubis rompió una rueda durante un viaje y debió pedir ayuda a unos campesinos, que mientras lo auxiliaban le hicieron probar la tarta. Tanto le gustó al noble, que la llevó a la corte de los Borbones. Se cuenta que la reina María Teresa de Austria, esposa de Fernando II de Borbón, apodada con el mote de "la Reina que nunca sonríe", probó la pasta frola y exhibió una gran sonrisa.
+                        En Sudamérica, la pasta frola llegó de la mano de inmigrantes italianos y en su preparación se usa membrillo para el relleno, siendo esta tarta la mejor compañía para tomar un buen mate o un té.
+                    <p>
+                </div>
+            </div>
+        </section>
+
+        <section class="introd">
+            <div class="dulceOsalado">
+                <div class="img-container">
+                    <img src="/img/pastafrola-membrillo.png">
+                    <h3>Dato Curioso!</h3>
+                </div>
+                <div class="contenido">
+                    <h3>Sobre La Pasta Frola:</h3>
+                    <p>Cuenta la leyenda que el origen de esta tarta se debe a una sirena llamada Partenope, que una vez por año visitaba el Golfo de Posillipo. Los napolitanos, para homenajearla le regalaban trigo, huevos, agua de flores de naranjo y otras materias primas que siete vírgenes pasaron a buscar. La sirena, en agradecimiento, recibió de ellos la pasta frola, que, a su vez, obsequió a los napolitanos.
+                        Pero más realista es la historia que afirma que unas religiosas la inventaron en el convento de San Gregorio de Armeno. La pasta frola trascendió los muros del convento y se difundió por la región. Pero su fama llegó cuando el carruaje del marqués de Rubis rompió una rueda durante un viaje y debió pedir ayuda a unos campesinos, que mientras lo auxiliaban le hicieron probar la tarta. Tanto le gustó al noble, que la llevó a la corte de los Borbones. Se cuenta que la reina María Teresa de Austria, esposa de Fernando II de Borbón, apodada con el mote de "la Reina que nunca sonríe", probó la pasta frola y exhibió una gran sonrisa.
+                        En Sudamérica, la pasta frola llegó de la mano de inmigrantes italianos y en su preparación se usa membrillo para el relleno, siendo esta tarta la mejor compañía para tomar un buen mate o un té.
+                    <p>
+                </div>
+            </div>
+        </section>
+
+        <section class="introd">
+            <div class="dulceOsalado">
+                <div class="img-container">
+                    <img src="/img/pastafrola-membrillo.png">
+                    <h3>Dato Curioso!</h3>
+                </div>
+                <div class="contenido">
+                    <h3>Sobre La Pasta Frola:</h3>
+                    <p>Cuenta la leyenda que el origen de esta tarta se debe a una sirena llamada Partenope, que una vez por año visitaba el Golfo de Posillipo. Los napolitanos, para homenajearla le regalaban trigo, huevos, agua de flores de naranjo y otras materias primas que siete vírgenes pasaron a buscar. La sirena, en agradecimiento, recibió de ellos la pasta frola, que, a su vez, obsequió a los napolitanos.
+                        Pero más realista es la historia que afirma que unas religiosas la inventaron en el convento de San Gregorio de Armeno. La pasta frola trascendió los muros del convento y se difundió por la región. Pero su fama llegó cuando el carruaje del marqués de Rubis rompió una rueda durante un viaje y debió pedir ayuda a unos campesinos, que mientras lo auxiliaban le hicieron probar la tarta. Tanto le gustó al noble, que la llevó a la corte de los Borbones. Se cuenta que la reina María Teresa de Austria, esposa de Fernando II de Borbón, apodada con el mote de "la Reina que nunca sonríe", probó la pasta frola y exhibió una gran sonrisa.
+                        En Sudamérica, la pasta frola llegó de la mano de inmigrantes italianos y en su preparación se usa membrillo para el relleno, siendo esta tarta la mejor compañía para tomar un buen mate o un té.
+                    <p>
+                </div>
+            </div>
+        </section>
+
+        <section class="introd">
+            <div class="dulceOsalado">
+                <div class="img-container">
+                    <img src="/img/pastafrola-membrillo.png">
+                    <h3>Dato Curioso!</h3>
+                </div>
+                <div class="contenido">
+                    <h3>Sobre La Pasta Frola:</h3>
+                    <p>Cuenta la leyenda que el origen de esta tarta se debe a una sirena llamada Partenope, que una vez por año visitaba el Golfo de Posillipo. Los napolitanos, para homenajearla le regalaban trigo, huevos, agua de flores de naranjo y otras materias primas que siete vírgenes pasaron a buscar. La sirena, en agradecimiento, recibió de ellos la pasta frola, que, a su vez, obsequió a los napolitanos.
+                        Pero más realista es la historia que afirma que unas religiosas la inventaron en el convento de San Gregorio de Armeno. La pasta frola trascendió los muros del convento y se difundió por la región. Pero su fama llegó cuando el carruaje del marqués de Rubis rompió una rueda durante un viaje y debió pedir ayuda a unos campesinos, que mientras lo auxiliaban le hicieron probar la tarta. Tanto le gustó al noble, que la llevó a la corte de los Borbones. Se cuenta que la reina María Teresa de Austria, esposa de Fernando II de Borbón, apodada con el mote de "la Reina que nunca sonríe", probó la pasta frola y exhibió una gran sonrisa.
+                        En Sudamérica, la pasta frola llegó de la mano de inmigrantes italianos y en su preparación se usa membrillo para el relleno, siendo esta tarta la mejor compañía para tomar un buen mate o un té.
+                    <p>
+                </div>
+            </div>
+        </section>
+
+        <section class="introd">
+            <div class="dulceOsalado">
+                <div class="img-container">
+                    <img src="/img/pastafrola-membrillo.png">
+                    <h3>Dato Curioso!</h3>
+                </div>
+                <div class="contenido">
+                    <h3>Sobre La Pasta Frola:</h3>
+                    <p>Cuenta la leyenda que el origen de esta tarta se debe a una sirena llamada Partenope, que una vez por año visitaba el Golfo de Posillipo. Los napolitanos, para homenajearla le regalaban trigo, huevos, agua de flores de naranjo y otras materias primas que siete vírgenes pasaron a buscar. La sirena, en agradecimiento, recibió de ellos la pasta frola, que, a su vez, obsequió a los napolitanos.
+                        Pero más realista es la historia que afirma que unas religiosas la inventaron en el convento de San Gregorio de Armeno. La pasta frola trascendió los muros del convento y se difundió por la región. Pero su fama llegó cuando el carruaje del marqués de Rubis rompió una rueda durante un viaje y debió pedir ayuda a unos campesinos, que mientras lo auxiliaban le hicieron probar la tarta. Tanto le gustó al noble, que la llevó a la corte de los Borbones. Se cuenta que la reina María Teresa de Austria, esposa de Fernando II de Borbón, apodada con el mote de "la Reina que nunca sonríe", probó la pasta frola y exhibió una gran sonrisa.
+                        En Sudamérica, la pasta frola llegó de la mano de inmigrantes italianos y en su preparación se usa membrillo para el relleno, siendo esta tarta la mejor compañía para tomar un buen mate o un té.
+                    <p>
+                </div>
+            </div>
+        </section>
 
 
 
